--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
@@ -31,7 +31,7 @@
     <div class="col">
         <div class="row xs-gutters">
             <div class="col-12 col-md-3 d-flex align-items-center">
-                <div class="pd-associated-product-name text-truncate" title="@Model.Name">
+                <div class="pd-assoc-name text-truncate" title="@Model.Name">
                     @Html.Raw(Model.Name)
                 </div>
             </div>
