--- a/src/Smartstore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Confirm.cshtml
@@ -117,9 +117,8 @@
     </div>
 </div>
 
-<script sm-target-zone="scripts" data-origin="confirm-method">
+<script sm-target-zone="scripts" data-origin="checkout-confirm">
     $(function () {
-
         @if (Model.TermsOfServiceEnabled)
         {
             <text>
