--- a/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
@@ -1,12 +1,11 @@
-﻿@using Microsoft.AspNetCore.Mvc.ModelBinding;
-@using Smartstore.Web.Models.Checkout;
+﻿@using Smartstore.Web.Models.Checkout;
 
 @model CheckoutAddressModel
 
 @{
     Layout = "_Checkout";
     Assets.AppendTitleParts(T("PageTitle.Checkout.BillingAddress"));
-    Assets.BodyAttributes.AppendCssClass("no-offcanvas-cart");
+    Assets.BodyAttributes.AppendCssClass("no-offcanvas-cart content-overflow-initial");
     Assets.AddMetaRobots();
 }
 
@@ -18,98 +17,50 @@
     <div class="page-title">
         <h1 class="h3">@T("Checkout.BillingAddress")</h1>
     </div>
-    <div class="page-body checkout-data">
-        <form asp-action="BillingAddress" asp-controller="Checkout" method="post">
-            <zone name="checkout_billing_address_top" />
-
-            <fieldset sm-if="Model.HasAddresses" class="content-group mb-3">
-                <legend><span>@T("Checkout.SelectBillingAddress")</span></legend>
-
-                <div sm-if="Model.IsShippingRequired" class="form-check my-3">
-                    <input asp-for="ShippingAddressDiffers" class="form-check-input" type="checkbox" sm-switch="false" />
-                    <label class="form-check-label" for="@Html.NameFor(x => x.ShippingAddressDiffers)">
-                        @T("Checkout.SpecifyDifferingShippingAddress")
-                    </label>
+    <div class="page-body checkout-data">        
+        <div class="order-summary-content">
+            <zone name="order_summary_content_before" />
+                    
+            <div class="row cart-container">
+                <div class="col-lg-7 col-xl-8">
+                    <partial name="BillingAddressForm" />
                 </div>
 
-                <div class="row card-grid g-3 row-cols-1 row-cols-md-2 row-cols-lg-3 address-list">
-                    @foreach (var item in Model.ExistingAddresses)
-                    {
-                        <div class="col">
-                            <div class="card card-body address-list-item">
-                                <div class="address-item">
-                                    <button class="btn btn-warning btn-block select-billing-address-button"
-                                            data-url="@Url.Action("SelectBillingAddress", new { addressId = item.Id })">
-                                        <span>@T("Checkout.BillToThisAddress")</span>
-                                        <i class="fa fa-angle-right"></i>
-                                    </button>
+                <div class="col-lg-5 col-xl-4">
+                    <div class="cart-footer cart-footer-panel">
+                        <div class="row">
+                            <div class="col-12 cart-footer-group">
+                                <zone name="order_summary_totals_before" />
 
-                                    <div class="address-data mt-3">
-                                        <div class="name pb-2">
-                                            <strong>
-                                                <span sm-if="item.FirstName.IsEmpty() && item.LastName.IsEmpty()">@item.Company</span>
-                                                <span class="bidi-embed">@item.FirstName</span>
-                                                <span class="bidi-embed">@item.LastName</span>
-                                            </strong>
-                                        </div>
-                                        <div class="email">
-                                            <span>@T("Address.Fields.Email"):</span>
-                                            <span>@item.Email</span>
-                                        </div>
-                                        <div sm-if="item.PhoneEnabled" class="phone">
-                                            <span>@T("Address.Fields.PhoneNumber"):</span>
-                                            <span>@item.PhoneNumber</span>
-                                        </div>
-                                        <div sm-if="item.FaxEnabled && item.FaxNumber.HasValue()" class="fax">
-                                            <span>@T("Address.Fields.FaxNumber"):</span>
-                                            <span>@item.FaxNumber</span>
-                                        </div>
-                                        <div class="address">
-                                            @Html.Raw(item.FormattedAddress)
-                                        </div>
-                                    </div>
+                                <div id="order-totals">
+                                    @await Component.InvokeAsync("OrderTotals")
                                 </div>
+
+                                <zone name="order_summary_totals_after" />
                             </div>
+
+                            <zone name="order_summary_actions" remove-if-empty="true" replace-content="true">
+                                <div class="col-12 mt-3 cart-footer-actions">
+                                    <zone name="order_summary_buttons_before" />
+
+                                    <div class="cart-buttons">
+                                        <input type="submit" id="nextstep" name="nextstep" class="d-none" />
+                                        <button type="button" class="btn btn-warning btn-lg btn-block new-address-next-step-button" onclick="return false;">
+                                            <span>@T("Checkout.NextButton")</span>
+                                            <i class="fa fa-angle-right"></i>
+                                        </button>
+                                    </div>
+
+                                    <zone name="order_summary_buttons_after" />
+                                </div>
+                            </zone>
                         </div>
-                    }
-
-                    <partial name="_AddNewAddress" />
-                </div>
-            </fieldset>
-
-            <zone name="checkout_billing_address_middle" />
-
-            <fieldset class="content-group cnt-add-new-address pt-3" attr-style='(Model.HasAddresses && ViewData.ModelState.IsValid, "display:none")'>
-                <legend><span>@T(Model.HasAddresses ? "Checkout.OrEnterNewAddress" : "Checkout.EnterBillingAddress")</span></legend>
-                <div class="enter-address">
-                    <div class="enter-address-body">
-                        @{
-                            var dataDictAddress = new ViewDataDictionary(new EmptyModelMetadataProvider(), new ModelStateDictionary());
-                            dataDictAddress["breakpoint"] = "sm";
-                            // Merge ModelState (required for validation).
-                            dataDictAddress.ModelState.Merge(ViewData.ModelState);
-                            dataDictAddress.TemplateInfo.HtmlFieldPrefix = "NewAddress";
-                        }
-
-                        <partial name="_CreateOrUpdateAddress" model="Model.NewAddress" view-data="dataDictAddress" />
-                    </div>
-
-                    <div class="buttons">
-                        <a href="@Model.PreviousStepUrl" class="btn btn-secondary btn-lg">
-                            <i class="fa fa-angle-left"></i>
-                            <span>@T("Common.Back")</span>
-                        </a>
-                        <input type="submit" id="nextstep" name="nextstep" class="d-none" />
-                        <button type="button" class="btn btn-warning btn-lg new-address-next-step-button">
-                            <span>@T("Checkout.NextButton")</span>
-                            <i class="fa fa-angle-right"></i>
-                        </button>
                     </div>
                 </div>
-            </fieldset>
+            </div>
 
-            <zone name="checkout_billing_address_bottom" />
-        </form>
+            <zone name="order_summary_content_after" />
+        </div>
     </div>
 </div>
 
