Order total sticky panel in checkout

--- a/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
@@ -1,5 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Mvc.ModelBinding
-@using Smartstore.Core.Checkout.Orders
 @using Smartstore.Web.Models.Checkout
 
 @model CheckoutAddressModel
@@ -18,7 +17,7 @@
 }
 
 <widget target-zone="order_progress">
-    @await Component.InvokeAsync("CheckoutProgress", new { action = CheckoutActionNames.BillingAddress })
+    @await Component.InvokeAsync("CheckoutProgress", new { action = Model.ActionName })
 </widget>
 
 <div class="page billing-address-page">
