Grouped products review

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
@@ -3,6 +3,7 @@
 @model GroupedProductModel
 
 @*
+    TODO: (mg) Local search: Never hide the collapse headers.
     TODO: (mg) (low prio) List needs title: Ausführungen (DE) / Variations (EN) (configurable on product level as part of ProductTypeConfiguration). TBD with MC.
     TODO: (mg) PageSize should also apply to (ungrouped) default template
     TODO: (mc) Revamp accordion design: gray headers, titles above accordion etc.
