Fixed license label not updated after license reset check in module list

--- a/src/Smartstore.Web/Areas/Admin/Views/Module/List.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Module/List.cshtml
@@ -547,7 +547,9 @@
                         </a>
 
                         <!-- License badge -->
-                        <partial name="LicenseLabel" model="module.LicenseLabel" />
+                        <div class="license-label">
+                            <partial name="LicenseLabel" model="module.LicenseLabel" />
+                        </div>
 
                         <!-- Actions dropdown -->
                         <div sm-if="module.Installed" class="module-actions dropdown">
